@@ -6,12 +6,14 @@ extern int	receive_window_size;
 
 static int Net_packet();
 int Net_setup(void);
-int Net_verify(char *real, char *nick, char *pass, int sex, int race, int class);
+//int Net_verify(char *real, char *nick, char *pass, int sex, int race, int class);
+int Net_verify(char *real, char *nick, char *pass);
 int Net_init(char *server, int fd);
 void Net_cleanup(void);
 int Net_flush(void);
 int Net_fd(void);
-int Net_start(void);
+//int Net_start(void);
+int Net_start(int sex, int race, int class);
 int Net_input(void);
 int Receive_start(void);
 int Receive_end(void);
